paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_2/sample_001/target.compile.log
warning: variable does not need to be mutable
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_2/sample_001/target.rs:2:9
  |
2 |     let mut x = init;
  |         ----^
  |         |
  |         help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0596]: cannot borrow `arr` as mutable, as it is not declared as mutable
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/compound_literals_2/sample_001/target.rs:5:14
  |
5 |     p = &mut arr[..];
  |              ^^^ cannot borrow as mutable
  |
help: consider changing this to be mutable
  |
4 |     let mut arr = [p[0], 0];
  |         +++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0596`.